# Quantum-Chess

./: CMakeLists.txt  README.md
Docs/: CMakeLists.txt  Doxyfile.in  annotated_dup.js  classes.html  concepts.js  dir_05e0fd15101eac278a495a1bc0bec445.js  dir_14fa3544e2b07b603ced12c6c1afa9ed.html  dir_257b6b4c5b838db4e0386065ce3fb707.html  dir_257b6b4c5b838db4e0386065ce3fb707.js  dir_3ff44f5f61a87232b90f642c33a86093.html  dir_3ff44f5f61a87232b90f642c33a86093.js  dir_420436295a636d155952334ef9dd4449.html  dir_420436295a636d155952334ef9dd4449.js  dir_549152255f51cdaf7a73ae7c27fff3a6.js  dir_63772b626f2709090f0bdca0f40827b4.html  dir_67b814c37437639b821c20539bab60e7.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_83ce8cd51560902b7a43da62f40f077d.html  dir_8aca7cdb3246fbcacdb040c9d753ac1d.js  dir_94df0704ad9d14b82e20b9ab05ad94ee.html  dir_94df0704ad9d14b82e20b9ab05ad94ee.js  dir_95a90be2d305d42f1f44f0665f93c159.html  dir_95a90be2d305d42f1f44f0665f93c159.js  dir_a6fef3026f5a27d72dc9580dd8191044.html  dir_a6fef3026f5a27d72dc9580dd8191044.js  dir_c85bbe744eb3f453b27a8f2bfc5fc483.html  dir_c85bbe744eb3f453b27a8f2bfc5fc483.js  dir_d8fb036c136c1e8ac7e608a9805476a1.html  dir_d8fb036c136c1e8ac7e608a9805476a1.js  doxygen_crawl.html  files_dup.js  functions_enum.html  functions_func.html  functions_rela.html  globals.html  globals_type.html  menudata.js  namespacemembers_func.html  namespaces.html  (+2 more)
Docs/d1/d42/: class_board-members.html
Docs/d1/dc9/: _move_8hpp.html
Docs/d2/d32/: 3_828_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html
Docs/d2/d75/: math__utility_8cpp_8obj_8d.html
Docs/d2/d92/: md__d_1_2_users_2quent_2_programmes_2_c_09_09_2_project_2_quantum-_chess_2build_2_matrix_2_r_e_a_d_m_e.html
Docs/d2/deb/: _c_matrix_8hpp.html  _c_matrix_8hpp.js
Docs/d2/df1/: struct_coord.html  struct_coord.js
Docs/d3/d06/: _color_8hpp.html
Docs/d3/dfd/: class_board.html  class_board.js
Docs/d5/dd1/: 3_829_80-rc2_2_compiler_id_c_2_c_make_c_compiler_id_8c.html
Docs/d6/d3f/: class_matrix.html  class_matrix.js
Docs/d6/d69/: _unitary_8hpp_source.html
Docs/d7/d87/: class_piece.html
Docs/d8/d49/: _matrix_8hpp.html  _matrix_8hpp.js
Docs/search/: all_1.js  all_12.js  all_13.js  all_14.js  all_15.js  all_5.js  all_6.js  all_8.js  all_b.js  all_c.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  concepts_0.js  concepts_1.js  defines_4.js  enums_1.js  enumvalues_0.js  enumvalues_2.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_5.js  files_7.js  functions_2.js  functions_5.js  functions_7.js  functions_9.js  functions_b.js  functions_c.js  functions_f.js  pages_0.js  related_0.js  searchdata.js  typedefs_1.js  typedefs_3.js  variables_0.js  (+5 more)
cmake/: CompilerWarnings.cmake
docs/: Doxyfile.in  annotated.html  annotated_dup.js  classes.html  concepts.html  dir_05e0fd15101eac278a495a1bc0bec445.html  dir_0825906438f20f937545da1bdf188976.html  dir_0825906438f20f937545da1bdf188976.js  dir_0e6cd2ceb893964943f90ac8ea9d5589.html  dir_0e6cd2ceb893964943f90ac8ea9d5589.js  dir_12d27525770c56f16a839ee3fb372957.html  dir_12d27525770c56f16a839ee3fb372957.js  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_14fa3544e2b07b603ced12c6c1afa9ed.js  dir_17ac80c537e9929ef0941035a64024a5.html  dir_17ac80c537e9929ef0941035a64024a5.js  dir_1f4e3cf3760c8fff177f416c57c91dd1.html  dir_1f4e3cf3760c8fff177f416c57c91dd1.js  dir_216d5b3f829d9aea3a6b73dd53f2c342.html  dir_216d5b3f829d9aea3a6b73dd53f2c342.js  dir_2ee68de69df77252c0204c9e68ec8d5c.html  dir_2ee68de69df77252c0204c9e68ec8d5c.js  dir_370fb849bdcfb5b0a5082685eecd4f8b.html  dir_370fb849bdcfb5b0a5082685eecd4f8b.js  dir_37b2c720034e4a4d20d94b61ca6b02d8.html  dir_37b2c720034e4a4d20d94b61ca6b02d8.js  dir_3ff44f5f61a87232b90f642c33a86093.html  dir_403b053039a4ecab80d2ef9a93cf3489.html  dir_403b053039a4ecab80d2ef9a93cf3489.js  dir_474cf0c4d5a361203e057c9e3708934a.html  dir_474cf0c4d5a361203e057c9e3708934a.js  dir_4fc8b5fd5c176f3a25bff903472b4a44.html  dir_4fc8b5fd5c176f3a25bff903472b4a44.js  dir_522f2bde5b32801a9e69f848df19685b.html  dir_522f2bde5b32801a9e69f848df19685b.js  dir_549152255f51cdaf7a73ae7c27fff3a6.html  dir_571217309fb824abc74726c0183634b6.html  dir_571217309fb824abc74726c0183634b6.js  dir_5f1533ae3343ec0e224ec65dc620d7fe.html  (+111 more)
docs/search/: all_0.js  all_1.js  all_10.html  all_10.js  all_11.html  all_11.js  all_12.html  all_12.js  all_13.html  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.html  all_d.js  all_e.html  all_e.js  all_f.html  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.html  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+96 more)
include/: CMatrix.hpp  Color.hpp  Complex_printer.hpp  Constexpr.hpp  Coord.hpp  Interface.hpp  Move.hpp  Unitary.hpp  constexpr.hpp  observer_ptr.hpp
include/Qubit/: Qubit.hpp  Qubit.tpp
include/Unitary/: Unitary.hpp
src/: main.cpp
src/Board/: Board.hpp  Board.tpp
src/ComputerPlayer/: ComputerPlayer.hpp  ComputerPlayer.tpp
src/Coord/: Coord.cpp  Coord.hpp
src/Final_solver/: Final_solver.hpp
src/GameBoard/: GameBoard.hpp  GameBoard.tpp  Piece.hpp
src/Interface_SDL2pp/: Interface_SDL2pp.cpp  Interface_SDL2pp.hpp
src/Piece/: Piece.cpp  Piece.hpp  Piece.tpp  TypePiece.hpp
src/Qubit/: Qubit.hpp  Qubit.tpp
src/check_path/: check_path.hpp  check_path.tpp
src/final_solver/: final_solver.hpp  final_solver.tpp
src/math_utility/: math_utility.cpp  math_utility.hpp
test/: CMakeLists.txt  test_get_proba_move_slide_capture.cpp  test_get_proba_move_slide_on_same_color.cpp  test_get_proba_move_slide_without_target.cpp  test_move_enpassant_with_capture.cpp  test_move_pawn_two_step.cpp  test_move_promotion.cpp  test_move_promotion_with_capture.cpp  test_move_promotion_with_split_before.cpp  test_move_split_with_mesure.cpp  test_slide_merge_move_through_a_split_piece.cpp  test_split_in_non_empty_case.cpp
(+218 files in other folders)
